fix image too big

--- a/src/pages/blogs/grid/author/style.module.css
+++ b/src/pages/blogs/grid/author/style.module.css
@@ -19,3 +19,8 @@
   color: #969696;
   font-size: 12px;
 }
+
+.image {
+  width: 40px;
+  height: 60px;
+}
